# dropship-linux

./: AGENTS.md
.github/workflows/: linux.yml
dropship/dropship/: CMakeLists.txt
dropship/dropship/linux/: build-appimage.sh  dropship.desktop  org.dropship.policy
dropship/dropship/src/: main_linux.cpp  pch_linux.h
dropship/dropship/src/platform/: platform.h  privileges.h  privileges_linux.cpp
dropship/dropship/src/platform/firewall/: firewall.h  firewall_linux.cpp
dropship/dropship/src/platform/http/: http.h  http_linux.cpp
